--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@ safe: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Yi's Blog
-tagline: aha
+title : Yi's technical home
 author :
   name : Yi FU
   email : yvesfu@gmail.com
@@ -26,7 +25,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://fuyi.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -124,3 +123,4 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
+  # custom global variable
