--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Yi's technical Blog
 author: "Yi Fu"
 header-img: img/home-bg.jpg
 email: yvesfu@gmail.com
+keywords: "software engineering, web develpment, design pattern, data scientist"
 description: "Lazy, no description"
 baseurl: ""
 url: "blog.minus1.se"
@@ -13,6 +14,8 @@ linkedin_user: yvesfu
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
 highlighter: pygments
 permalink: pretty
 paginate: 5
