update highlighter to rouge to avoid building warning

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ linkedin_user: yvesfu
 markdown: kramdown
 kramdown:
   input: GFM
-highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
